# BrainCo_hand_code

./: CMakeLists.txt  generate_serial_rules.sh  hand_sdk.c  hand_sdk.h  hand_test.c  main_mtr_shared.pb-c.c  main_mtr_shared.pb-c.h  main_to_mtr.pb-c.c  main_to_mtr.pb-c.h  mtr_to_main.pb-c.c  mtr_to_main.pb-c.h  readme.md  softCRC.c  softCRC.h  stark_common.pb-c.c  stark_common.pb-c.h
proto/: main_mtr_shared.options  main_mtr_shared.proto  main_to_mtr.proto  mtr_to_main.proto  stark_common.proto
